--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,9 +13,11 @@
     "chokidar": "^4.0.0",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "better-sqlite3": "^11.7.0",
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/ws": "^8.5.12",
