--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -12,9 +12,8 @@
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
     "@data-dev-ide/shared": "workspace:*",
+    "@data-dev-ide/sql-parser": "workspace:*",
     "antd": "^5.21.0",
-    "antlr4-c3": "^3.4.4",
-    "antlr4ng": "^3.0.16",
     "axios": "^1.7.0",
     "monaco-editor": "^0.52.0",
     "react": "^18.3.1",
@@ -26,7 +25,6 @@
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.0",
-    "antlr4ng-cli": "^2.0.0",
     "typescript": "^5.6.0",
     "vite": "^6.0.0"
   }
